--- a/components.json
+++ b/components.json
@@ -7,7 +7,7 @@
     "baseColor": "slate",
     "cssVariables": true
   },
-  "rsc": false,
+  "rsc": true,
   "tsx": true,
   "aliases": {
     "utils": "@/lib/utils",
