--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codehub",
+  "name": "nextjs-starter-template",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -20,7 +20,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "lucide-react": "^0.325.0",
+    "lucide-react": "^0.330.0",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
